tests/baselines/reference/assignmentCompatWithCallSignatures.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(35,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(36,1): error TS2322: Type '(x: 文字) => 无值' is not assignable to type 'T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(37,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(38,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(39,1): error TS2322: Type 'S2' is not assignable to type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(40,1): error TS2322: Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(41,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts(42,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures.ts (8 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        (x: number): void;
    }
    var t: T;
    var a: { (x: number): void };
    
    t = a;
    a = t;
    
    interface S {
        (x: number): string;
    }
    var s: S;
    var a2: { (x: number): string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    t = <T>(x: T) => 1;
    t = () => 1;
    t = function (x: number) { return ''; }
    a = <T>(x: T) => 1;
    a = () => 1;
    a = function (x: number) { return ''; }
    
    interface S2 {
        (x: string): void;
    }
    var s2: S2;
    var a3: { (x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    t = a3;
    ~
!!! error TS2322: Type '(x: 文字) => 无值' is not assignable to type 'T'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    a = a3;
    ~
!!! error TS2322: Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    